compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__functions__entry_point_main_function_with_no_args.snap
---
source: compiler-core/src/fsharp/tests/functions.rs
expression: "\npub fn main() {\n    0\n}\n"
---
module rec my.``mod``

[<EntryPoint>]
let main (_: string[]) = begin
    0L
end
