compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__functions__function_as_value.snap
---
source: compiler-core/src/fsharp/tests/functions.rs
expression: "\nfn other() {\n  Nil\n}\n\npub fn foo() {\n  other\n}\n"
---
module rec my.``mod``
let private other () = begin
    ()
end
let foo () = begin
    other
end
