compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__functions__function_with_use_statements.snap
---
source: compiler-core/src/fsharp/tests/functions.rs
expression: "\nfn go() {\n  use a <- something\n  use b <- something\n  a + 1 + b\n}\nfn something(cba) { cba(1) }\n"
---
module rec my.``mod``

let private something (cba: int64 -> 'u12) = begin
    cba (1L)
end
let private go () = begin
    something (fun(a: int64) -> begin 
        something (fun(b: int64) -> begin 
            a + 1L + b
        end)
    end)
end
